--- a/Resources/public/css/theme.css
+++ b/Resources/public/css/theme.css
@@ -1,10 +1,10 @@
 /* application styles */
 @font-face {
     font-family: 'ez-editorial-icomoon';
-    src:url('../bundles/ezsystemseditorial/fonts/icomoon.eot?v2');
+    src:url('../bundles/ezsystemseditorial/fonts/icomoon.eot');
     src:url('../bundles/ezsystemseditorial/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-        url('../bundles/ezsystemseditorial/fonts/icomoon.woff?v2') format('woff'),
-        url('../bundles/ezsystemseditorial/fonts/icomoon.ttf?v2') format('truetype'),
+        url('../bundles/ezsystemseditorial/fonts/icomoon.woff') format('woff'),
+        url('../bundles/ezsystemseditorial/fonts/icomoon.ttf') format('truetype'),
         url('../bundles/ezsystemseditorial/fonts/icomoon.svg#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
@@ -62,18 +62,23 @@
     color: #222;
 }
 
-.ez-view-formview .ez-form-content fieldset {
+.ez-view-contenteditformview .ez-form-content fieldset {
     border: 1px solid #CCCCCC;
-    box-shadow: 0 0 2px #CCCCCC;
 }
 
-.ez-view-formview .ez-form-content fieldset label {
-    display: inline-block;
+legend.ez-formview-fieldset-name {
     background-color: #f9f9f9;
     color: #333333;
+    font-size: 14px;
     font-weight: bold;
-    left: 15px;
-    overflow: hidden;
-    top: -10px;
+    line-height: 18px;
     z-index: 5;
+    padding: 3px 10px;
+    margin: 0;
+    width: auto;
+    height: auto;
+}
+
+.ez-view-contenteditformview .ez-form-content fieldset.is-collapsed .ez-formview-fieldset-name:after {
+    content: "\E004";
 }
